--- a/app/frontend/src/template/arviointi/arviointi.html
+++ b/app/frontend/src/template/arviointi/arviointi.html
@@ -9,6 +9,8 @@
   <div class="panel-body">
     <h2>{{ tutkinnonosatById[tutkinnonosa] | lokalisoiKentta:'nimi' }}</h2>
 
+    <div class="alert alert-warning" role="alert" ng-if="kohdealueet === undefined || kohdealueet.length === 0" translate="arviointi.ei_kohteita"></div>
+
     <section class="kohdealue" ng-repeat="kohdealue in kohdealueet">
       <h3 sticky-header>{{ kohdealue | lokalisoiKentta:'nimi' }}</h3>
 
