OPH-1403: Printtityylit osaan.fi -raporttiin

--- a/app/frontend/src/sass/main.scss
+++ b/app/frontend/src/sass/main.scss
@@ -30,3 +30,7 @@
 /* MQ
 ------------------------------------------------------------------------------*/
 @import "partials/_mediaquery";
+
+/* Print
+------------------------------------------------------------------------------*/
+@import "yhteiset/_print";
