--- a/app/frontend/src/template/direktiivit/polku.html
+++ b/app/frontend/src/template/direktiivit/polku.html
@@ -1,4 +1,4 @@
-<div class="row wizard">
+<div class="row wizard hidden-print">
   <div class="col-md-12">
     <div class="wizard-item col-sm-3" ng-class="{active: path=='/'}">
       <a href="#/" translate="yleiset.valitse_tutkinto"></a>
