--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -9,7 +9,7 @@
     </h3>
   </div>
   <div class="panel-body">
-    <div class="row">
+    <div class="row hidden-print">
       <div class="col-md-12">
         <div class="pull-right">
           <div class="btn-group" role="group">
@@ -54,7 +54,7 @@
         <kaavio jakauma="jakauma"></kaavio>
       </div>
 
-      <div class="checkbox pull-right">
+      <div class="checkbox pull-right hidden-print">
         <label>
           <input type="checkbox" ng-model="naytaKommentit">
           <span translate="raportti.nayta_kommentit"></span>
