OPH-1464 Edistymisen seuranta arviointiin

--- a/app/frontend/src/sass/views/_arviointi.scss
+++ b/app/frontend/src/sass/views/_arviointi.scss
@@ -125,6 +125,21 @@
   }
 }
 
+h3.edistyminen {
+  padding: .5em;
+  background-color: $lightest-primary;
+  color: $darker-gray;
+  margin-top: 0;
+  border-top: 5px solid $lighter-primary;
+  position:relative;
+  
+  .btn {
+    position:absolute;
+    right:0;
+    top:0;
+  }
+}
+
 .arvio {
   margin: 0;
   font-size: 16px;
