--- a/app/frontend/src/sass/views/_arviointi.scss
+++ b/app/frontend/src/sass/views/_arviointi.scss
@@ -1,3 +1,9 @@
+
+  
+h3 + section.kysymys {
+  margin-top: 1em;
+}
+
 .kohdealue {
   p {
     font-size: 16px;
@@ -9,6 +15,8 @@
     color: $darker-gray;
     margin-top: 0;
     border-top: 5px solid $lighter-primary;
+    position:relative;
+    z-index:2;
   }
   
   .vapaatekstivastaus {
