--- a/app/frontend/src/template/arviointi/arviointi.html
+++ b/app/frontend/src/template/arviointi/arviointi.html
@@ -42,10 +42,10 @@
               <span class="asteikkoteksti">{{ 'arviointi.tekstivastaus' | translate }}</span>
             </label>
           </div>
-        </div>
-        <div class="row">
-          <div class="reveal-animation col-md-5 vapaatekstivastaus" ng-if="vapaateksti_auki">
-            <textarea ng-model="arviot[kuvaus.ammattitaidonkuvaus_id].vapaateksti" ng-model-options="{debounce: 200}" placeholder="{{ 'arviointi.tekstivastaus_placeholder' | translate }}" rows="4" class="form-control"></textarea>
+          <div class="valinnat-container vapaateksti">
+            <div class="reveal-animation vapaatekstivastaus" ng-if="vapaateksti_auki">
+              <textarea ng-model="arviot[kuvaus.ammattitaidonkuvaus_id].vapaateksti" ng-model-options="{debounce: 200}" placeholder="{{ 'arviointi.tekstivastaus_placeholder' | translate }}" rows="4" class="form-control"></textarea>
+            </div>
           </div>
         </div>
       </section>
