OPH-1429: mailto-linkin bodylle encodeURIComponent

--- a/app/frontend/src/template/direktiivit/tallennus.html
+++ b/app/frontend/src/template/direktiivit/tallennus.html
@@ -9,7 +9,7 @@
 
   <p><span translate="tallennus.kopioi_ohje"></span> <kbd><kbd>ctrl</kbd> + <kbd>c</kbd></kbd></p>
 
-  <p><a href="mailto:?subject=osaan.fi&body={{linkki}}" translate="tallennus.laheta_sahkopostilla"></a></p>
+  <p><a href="mailto:?subject=osaan.fi&body={{linkki_mailto}}" translate="tallennus.laheta_sahkopostilla"></a></p>
 </div>
 
 <div class="modal-footer">
