OPH-1419: Lisää "vastaukset muistissa" -teksti

--- a/app/frontend/src/template/etusivu/etusivu.html
+++ b/app/frontend/src/template/etusivu/etusivu.html
@@ -4,6 +4,8 @@
 <br />
 <polku></polku>
 
+<vastaukset-muistissa></vastaukset-muistissa>
+
 <div class="panel panel-primary">
   <div class="panel-heading">
     <h3 class="panel-title" translate="tutkinto.otsikko"></h3>
