--- a/app/frontend/src/sass/yhteiset/_print.scss
+++ b/app/frontend/src/sass/yhteiset/_print.scss
@@ -3,6 +3,9 @@
   body {
     font-size: 1em;
   }
+  p{
+    line-height: 1em;
+  }
   .no-print, .no-print * {
     display: none !important;
   }
