--- a/app/frontend/src/template/direktiivit/tutkinnonosa-tilastot.html
+++ b/app/frontend/src/template/direktiivit/tutkinnonosa-tilastot.html
@@ -7,8 +7,8 @@
   <div class="row"><div class="col-md-6"><span>{{ tutkinnonosa | lokalisoiKentta:'nimi' }}</span></div></div>
   <div class="row">
     <div class="col-xs-6">
-      <div class="progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="{{ tutkinnonosa.arvioituna }}" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: {{ tutkinnonosa.arvioituna }}%;">{{ tutkinnonosa.arvioituna }}%</div>
+      <div class="progress" style="margin-bottom: 0;">
+        <div class="progress-bar" role="progressbar" aria-valuenow="{{ tutkinnonosa.arvioituna }}" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: {{ tutkinnonosa.arvioituna }}%;" ng-style="{ 'width' : tutkinnonosa.arvioituna+'%'}">{{ tutkinnonosa.arvioituna }}%</div>
       </div>
     </div>
     <div class="col-xs-6">
