OPH-1431: Tallennuksen infotekstien muutos

--- a/app/frontend/src/template/direktiivit/tallennus.html
+++ b/app/frontend/src/template/direktiivit/tallennus.html
@@ -3,11 +3,13 @@
 </div>
 
 <div class="modal-body">
-  <p translate="tallennus.teksti" style="white-space: pre-wrap"></p>
+  <p translate="tallennus.teksti1" style="white-space: pre-wrap"></p>
 
   <input class="form-control" type="text" value="{{linkki}}" readonly click-to-select>
 
   <p><span translate="tallennus.kopioi_ohje"></span> <kbd><kbd>ctrl</kbd> + <kbd>c</kbd></kbd></p>
+
+  <p translate="tallennus.teksti2" style="white-space: pre-wrap"></p>
 
   <p><a href="mailto:?subject=osaan.fi&body={{linkki_mailto}}" translate="tallennus.laheta_sahkopostilla"></a></p>
 </div>
