OPH-1464: Piilota osaotsikot ylänapeista
"Arvioi osaaminen" -nappien alla ei näytetä tutkinnon osien otsikoita
ylhäällä, otsikot näytetään vain alhaalla.

--- a/app/frontend/src/template/arviointi/arviointi.html
+++ b/app/frontend/src/template/arviointi/arviointi.html
@@ -10,7 +10,7 @@
     
     <div class="osienselaus">
       <div class="row">
-        <osien-selaus></osien-selaus>
+        <osien-selaus otsikot="false"></osien-selaus>
       </div>
     </div>
     
